# essarion_build

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  WHY.md  pyproject.toml
.coming-soon/tests/: test_agent_subagent.py
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  CI.md  COMPETITIVE-HERMES.md  COOKBOOK.md  SKILLS.md
examples/: 01_quick_start.py  02_workflows.py  03_streaming.py  04_async_batch.py  05_conversation.py  06_telemetry.py  07_custom_provider.py  08_cache.py  09_agent_programmatic.py  10_project_setup.py  11_reasoning_effort.py  README.md  github-action-review.yml
src/essarion_build/: __init__.py  __main__.py  _async_api.py  _async_providers.py  _async_runtime.py  _async_streaming.py  _batch.py  _cache.py  _compaction.py  _config.py  _config_file.py  _content.py  _context.py  _conversation.py  _decorators.py  _effort.py  _generate.py  _prompts.py  _providers.py  _reasoning.py  _runtime.py  _schemas.py  _skills.py  _streaming.py  _telemetry.py  _windowing.py  auth.py  cli.py  evals.py  exceptions.py  pytest_plugin.py  recipes.py  redact.py  testing.py  tools.py  validators.py  workflows.py
src/essarion_build/agent/: __init__.py  _agent_exec.py  _background.py  _changes.py  _commands.py  _computer.py  _conventions.py  _crosscheck.py  _diagnostics.py  _diff_render.py  _dotenv.py  _hooks.py  _inline_tools.py  _input.py  _learned_skills.py  _loop.py  _mcp.py  _memory.py  _permissions.py  _pricing.py  _project.py  _repomap.py  _schedule.py  _session.py  _skill_picker.py  _ssrf.py  _subagent.py  _subagents.py  _theme.py  _tools.py  _ui.py  _verify.py  main.py
src/essarion_build/computer/: __init__.py  _actions.py  _backend.py  _desktop.py  _events.py  _expectations.py  _observer.py  _reducer.py  _screen.py  _vision.py  tools.py
src/essarion_build/skills/: accessibility.md  agile_practice.md  api_design.md  auth_security.md  build_systems.md  caching.md  cli_design.md  cloud_infra.md  code_organization.md  code_review.md  code_review_practice.md  code_search.md  code_smells.md  code_style.md  code_with_llms.md  concurrency.md  containers.md  data_modeling.md  database_design.md  debugging.md  dependency_injection.md  dependency_management.md  distributed_systems.md  documentation.md  dx.md  error_handling.md  event_driven.md  feature_flags.md  git_workflow.md  go_idioms.md  incident_response.md  internationalization.md  kubernetes.md  llm_integration.md  logging.md  microservices.md  migrations.md  ml_engineering.md  networking.md  observability.md  (+14 more)
tests/: conftest.py  test_agent_background.py  test_agent_budget.py  test_agent_changes.py  test_agent_codeintel.py  test_agent_commands.py  test_agent_commands_codeintel.py  test_agent_commands_extras.py  test_agent_commands_misc.py  test_agent_commands_new.py  test_agent_commands_tiered.py  test_agent_conventions.py  test_agent_diagnostics.py  test_agent_diff_render.py  test_agent_effort.py  test_agent_exec.py  test_agent_exec_budget.py  test_agent_exec_verify.py  test_agent_goal.py  test_agent_hooks.py  test_agent_inline_tools.py  test_agent_inline_tools_loop.py  test_agent_input.py  test_agent_learned_skills.py  test_agent_loop.py  test_agent_loop_extras.py  test_agent_main.py  test_agent_mcp.py  test_agent_memory.py  test_agent_pricing.py  test_agent_project.py  test_agent_recall.py  test_agent_remember.py  test_agent_repomap.py  test_agent_schedule.py  test_agent_session.py  test_agent_skill_picker.py  test_agent_ssrf.py  test_agent_streaming.py  test_agent_subagents.py  (+46 more)
