[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "essarion-build"
version = "0.3.0"
description = "BYOK reasoning amplification SDK: Context, reason(), generate(), workflows, streaming, async — for any LLM."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Essarion" },
]
keywords = [
    "llm", "reasoning", "anthropic", "claude", "openai", "gemini", "ollama",
    "coding-agent", "byok", "sdk", "streaming",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
essarion-build = "essarion_build.cli:main"
essarion = "essarion_build.cli:main"

[project.urls]
Homepage = "https://essarion.com"
Source = "https://github.com/hapi-developer/essarion_build"
Issues = "https://github.com/hapi-developer/essarion_build/issues"
Changelog = "https://github.com/hapi-developer/essarion_build/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
essarion_build = ["py.typed", "skills/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
